Updated logo and deleted unused files
Signed-off-by: Hannes Eilers <hannes.eilers@fh-kiel.de>

--- a/demo_MAIN/html/de/index.html
+++ b/demo_MAIN/html/de/index.html
@@ -77,7 +77,7 @@
 		</div>
 		
 		<div class="wissjahr-logo" id="maintain">
-			<img src="../img/wissjahr-logo.png" />
+			<img src="../img/fh-logo.png" />
 		</div>
 
 </body>
