--- a/demo_MAIN/html/de/wait.html
+++ b/demo_MAIN/html/de/wait.html
@@ -23,8 +23,7 @@
 		<table align="center">
 			<tr>
 				<td>
-					<img src="../img/fh-logo.png
-					" />
+					<img src="../img/fh-logo.png" />
 				</td>
 			</tr>
 		</table>
