--- a/demo_MAIN/html/en/index.html
+++ b/demo_MAIN/html/en/index.html
@@ -76,9 +76,9 @@
 			<div w3-include-html="nav.html"></div>
 		</div>
 		
-		<div class="wissjahr-logo" id="maintain">
+		<!--<div class="wissjahr-logo" id="maintain">
 			<img src="../img/wissjahr-logo.png" />
-		</div>
+		</div>-->
 
 </body>
 </html>
