--- a/demo_MAIN/html/de/index.html
+++ b/demo_MAIN/html/de/index.html
@@ -76,6 +76,8 @@
 			<div w3-include-html="nav.html"></div>
 		</div>
 		
+	</div>
+		
 		<!--<div class="wissjahr-logo" id="maintain">
 			<img src="../img/fh-logo.png" />
 		</div>-->
