Added basic programing code for meerkat catching game to be available. Added image and button for meerkat game
Signed-off-by: Hannes Eilers <hannes.eilers@fh-kiel.de>

--- a/demo_MAIN/html/de/index.html
+++ b/demo_MAIN/html/de/index.html
@@ -65,10 +65,10 @@
 						</button>
 					</td>
 					<td>
-						<!--<button id="contact" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/contact.png" /><br />
-							<h2>Infos zusenden</h2>
-						</button>-->
+						<button id="meerkat-game" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/meerkat.png" /><br />
+							<h2>Erdm. fangen</h2>
+						</button>
 					</td>
 				</tr>
 			</table>
