--- a/demo_MAIN/html/de/index.html
+++ b/demo_MAIN/html/de/index.html
@@ -32,19 +32,7 @@
 							<h2>Spa&szlig;iges</h2>
 						</button>
 					</td>
-					<td>
-						<!--
-						<button id="age" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/female.png" /><br />
-							<h2>Alter raten</h2>
-						</button>
-						-->
-						<!--
-						<button id="learnface" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/heart.png" /><br />
-							<h2>Freunde werden</h2>
-						</button>
-						-->
+					<td>						
 						<button id="rabbit" type="button" class="btn btn-primary btn-block btn-lg">
 							<img src="../img/rabbit.png" /><br />
 							<h2>Hasen fangen</h2>
@@ -55,7 +43,7 @@
 					<td>
 						<button id="memory" type="button" class="btn btn-primary btn-block btn-lg">
 							<img src="../img/picture.png" /><br />
-							<h2>Memory Spiel</h2>
+							<h2>Demenz Memory</h2>
 						</button>
 					</td>
 					<td>
@@ -72,15 +60,24 @@
 					</td>
 				</tr>
 			</table>
+			
+						<!--
+						<button id="age" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/female.png" /><br />
+							<h2>Alter raten</h2>
+						</button>
+						-->
+						<!--
+						<button id="learnface" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/heart.png" /><br />
+							<h2>Freunde werden</h2>
+						</button>
+						-->
 	
 			<div w3-include-html="nav.html"></div>
 		</div>
 		
 	</div>
-		
-		<!--<div class="wissjahr-logo" id="maintain">
-			<img src="../img/fh-logo.png" />
-		</div>-->
 
 </body>
 </html>
