--- a/demo_MAIN/html/de/music.html
+++ b/demo_MAIN/html/de/music.html
@@ -25,18 +25,12 @@
 							<img src="../img/mask.png" /><br />
 							<h2>Macarena</h2>
 						</button>
-						<!--
-						<button id="rock" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/guitar.png" /><br />
-							<h2>Rock 'n Roll</h2>
-							<small>www.bensound.com</small>
-						</button>
-						-->
+						
 					</td>
 					<td>						
 						<button id="instrument" type="button" class="btn btn-primary btn-block btn-lg">
 							<img src="../img/saxophone.png" /><br />
-							<h2>Saxophone spielen</h2><br />
+							<h2>Saxophon</h2>
 						</button>
 					</td>
 				</tr>
@@ -52,12 +46,6 @@
 							<img src="../img/cocktail.png" /><br />
 							<h2>Gangnam Style</h2>
 						</button>
-						<!--
-						<button id="coast" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/sailor.png" /><br />
-							<h2>An der Nordseek&uuml;ste</h2>
-						</button>
-						-->
 					</td>
 				</tr>
 			</table>
@@ -65,9 +53,19 @@
 			<div w3-include-html="nav.html"></div>
 		</div>
 		
-		<div class="wissjahr-logo">
-			<img src="../img/wissjahr-logo.png" />
-		</div>
+						<!--
+						<button id="rock" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/guitar.png" /><br />
+							<h2>Rock 'n Roll</h2>
+							<small>www.bensound.com</small>
+						</button>
+						-->
+						<!--
+						<button id="coast" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/sailor.png" /><br />
+							<h2>An der Nordseek&uuml;ste</h2>
+						</button>
+						-->
 
 </body>
 </html>
