--- a/demo_MAIN/html/en/fun2.html
+++ b/demo_MAIN/html/en/fun2.html
@@ -27,25 +27,18 @@
 						</button>
 					</td>
 					<td>
-						<!--
-						<button id="highfive" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/hand.png" /><br />
-							<h2>High Five</h2>
-						</button>
-						-->
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<!--
-						<button id="picture" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/camera.png" /><br />
-							<h2>Foto machen</h2>
-						</button> 
-						-->
+						
 						<button id="fist" type="button" class="btn btn-primary btn-block btn-lg">
 							<img src="../img/fist.png" /><br />
 							<h2>Fist Bump</h2>
+						</button>
+					</td>
+				</tr>
+				<tr>
+					<td>						
+						<button id="meerkat-game" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/meerkat.png" /><br />
+							<h2>Erdm. fangen</h2>
 						</button>
 					</td>
 					<td>
@@ -60,9 +53,19 @@
 			<div w3-include-html="nav.html"></div>
 		</div>
 		
-		<div class="wissjahr-logo">
-			<img src="../img/wissjahr-logo.png" />
-		</div>
+						<!--
+						<button id="picture" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/camera.png" /><br />
+							<h2>Foto machen</h2>
+						</button> 
+						-->
+						
+						<!--
+						<button id="highfive" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/hand.png" /><br />
+							<h2>High Five</h2>
+						</button>
+						-->
 
 </body>
 </html>
