--- a/demo_MAIN/html/en/index.html
+++ b/demo_MAIN/html/en/index.html
@@ -32,7 +32,35 @@
 							<h2>Spa&szlig;iges</h2>
 						</button>
 					</td>
+					<td>						
+						<button id="rabbit" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/rabbit.png" /><br />
+							<h2>Hasen fangen</h2>
+						</button>
+					</td>
+				</tr>
+				<tr>
 					<td>
+						<button id="memory" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/picture.png" /><br />
+							<h2>Demenz Memory</h2>
+						</button>
+					</td>
+					<td>
+						<button id="quiz" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/quiz.png" /><br />
+							<h2>Roboter Quiz</h2>
+						</button>
+					</td>
+					<td>
+						<button id="meerkat-game" type="button" class="btn btn-primary btn-block btn-lg">
+							<img src="../img/meerkat.png" /><br />
+							<h2>Erdm. fangen</h2>
+						</button>
+					</td>
+				</tr>
+			</table>
+			
 						<!--
 						<button id="age" type="button" class="btn btn-primary btn-block btn-lg">
 							<img src="../img/female.png" /><br />
@@ -45,40 +73,11 @@
 							<h2>Freunde werden</h2>
 						</button>
 						-->
-						<button id="rabbit" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/rabbit.png" /><br />
-							<h2>Hasen fangen</h2>
-						</button>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<button id="memory" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/picture.png" /><br />
-							<h2>Memory Spiel</h2>
-						</button>
-					</td>
-					<td>
-						<button id="quiz" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/quiz.png" /><br />
-							<h2>Roboter Quiz</h2>
-						</button>
-					</td>
-					<td>
-						<!--<button id="contact" type="button" class="btn btn-primary btn-block btn-lg">
-							<img src="../img/contact.png" /><br />
-							<h2>Infos zusenden</h2>
-						</button>-->
-					</td>
-				</tr>
-			</table>
 	
 			<div w3-include-html="nav.html"></div>
 		</div>
 		
-		<!--<div class="wissjahr-logo" id="maintain">
-			<img src="../img/wissjahr-logo.png" />
-		</div>-->
+	</div>
 
 </body>
 </html>
