--- a/demo_MAIN/html/en/nav.html
+++ b/demo_MAIN/html/en/nav.html
@@ -20,7 +20,7 @@
 			<!--<button id="settings" type="button" class="align-middle" ><img src="../img/settings.png" /></button>-->
 			
 			<div class="padding-custom"></div>
-			<img src="../img/logo.png" />
+			<img src="../img/fh-logo.png" />
 		</td>
 	</tr>
 </table>
