--- a/demo_meerkat-game/html/de/welcome.html
+++ b/demo_meerkat-game/html/de/welcome.html
@@ -8,14 +8,9 @@
 	<title>Bestaetungung</title>
     
 </head>
-<body class="bg-dark">
+<body>
 
-	<div class="p-3" style="width: 100%; height: 100%;">
-	
-		<button id="test1" class="btn btn-lg btn-success" style="width: 100%; height: 100%;">
-		<h1><b>Ja</b></h1>
-		</button>
-	</div>
+	<img src="../welcome.png" width=100% height=100%>
 	
 	<!-- Javascript -->
 	<script src="../jquery.min.js"></script>		<!-- lib required from touch.js -->
@@ -24,4 +19,4 @@
     	<script src="../bootstrap.min.js"></script> 	<!-- boostrap include -->
 		
 </body>
-</html5
+</html>
